--- a/static/screen-1.css
+++ b/static/screen-1.css
@@ -424,6 +424,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 2px 5px;
   background: #222;
   background: rgba(0, 0, 0, 0.2);
+  font-size: 2em;
 }
 
 #languageSelector .active {
