--- a/static/screen-1.css
+++ b/static/screen-1.css
@@ -394,7 +394,7 @@ h1, h2, h3, h4, h5, h6 {
 .wrapper {
   overflow: hidden;
   *zoom: 1;
-  width: 760px;
+  width: 800px;
   margin: 0 auto;
   position: relative;
   text-align: center;
@@ -640,10 +640,14 @@ background:url('https://s3.amazonaws.com/onepagelove/one-page-love-award.png') n
 #our-story .info h1 {
   font-family: "tangerine", cursive;
   color: #cdb532;
-  font-size: 5rem;
+  font-size: 5em;
   margin-bottom: 10px;
+  text-shadow: 1px 1px black;
 }
-
+#our-story .info .chinese h1 {
+  font-family: sans-serif;
+  font-size: 3em;
+}
 /* line 343, ../sass/screen.scss */
 #our-story .info h3 {
   /* margin-top: 120px; */
@@ -668,6 +672,9 @@ background:url('https://s3.amazonaws.com/onepagelove/one-page-love-award.png') n
 #our-story .info p {
   width: 450px;
   margin: 0 auto 10px;
+}
+#our-story .info .chinese p {
+  width: 560px;
 }
 /* line 358, ../sass/screen.scss */
 #our-story .info img {
